Get voting working from dance dialog

--- a/m4d/Views/Shared/_dancemodal.cshtml
+++ b/m4d/Views/Shared/_dancemodal.cshtml
@@ -21,7 +21,7 @@
                 </div>
                 <div data-bind="if:tagText"><span data-bind="html:tagText"></span></div>
                 <div style="margin-top: 10px">
-                    <a herf=""><img data-bind="attr:{src:likeUrl}" />&nbsp; <span data-bind="text: likeText"></span></a>
+                    <a herf="#" role="button" id="dance-modal-like"><img data-bind="attr:{src:likeUrl}" />&nbsp; <span data-bind="text: likeText"></span></a>
                 </div>
                 @*TODONEXT: Add reference to LikeHelper, figure out parameters, verify, then figure out how to get more useful test*@
             </div>
