--- a/m4d/Views/Shared/_ListSongs.cshtml
+++ b/m4d/Views/Shared/_ListSongs.cshtml
@@ -368,9 +368,13 @@
                                 // TODO: Dance name pulled from the danceMap doesn't require a db lookup - is there a way
                                 //  to make the more intuitive ditem.Dance.Name work without a lookup???
                                 var badge = danceStats.GetRatingBadge(ditem.DanceId, ditem.Weight);
-                                var name = danceStats.FromId(ditem.DanceId).DanceName;
+                                var stats = danceStats.FromId(ditem.DanceId);
+                                var name = stats.DanceName;
+                                var maxWeight = stats.MaxWeight;
                                 var label = name;
                                 var tags = string.Empty;
+                                var modalId = $"{ditem.DanceId}.{item.SongId}.modal";
+
                                 if (!string.IsNullOrWhiteSpace(ditem.TagSummary.Summary))
                                 {
                                     label = label + " <span class='glyphicon glyphicon-asterisk' aria-hidden='true'></span>";
@@ -408,10 +412,11 @@
                                     }
                                 }
 
-                                <a href='#' class='rating @badge label label-music' role='button'
+                                <a href='#' id='@modalId'
+                                    class='rating @badge label label-music' role='button'
                                     data-toggle='modal' data-target='#danceModal' aria-expanded='false'
                                     data-title='@item.Title' data-artist='@item.Artist' data-song-id='@item.SongId'
-                                    data-dance-name='@name' data-dance-id='@ditem.DanceId'
+                                    data-dance-name='@name' data-dance-id='@ditem.DanceId' data-dance-weight="@ditem.Weight" data-dance-max-weight="@maxWeight"
                                     data-filtered-url="@urlFiltered" data-dance-url='@urlDance' data-url='@url'
                                     data-tags='@MvcHtmlString.Create(tags)'
                                     >@Html.Raw(label)</a>
