--- a/m4d/Views/Shared/_dancemodal.cshtml
+++ b/m4d/Views/Shared/_dancemodal.cshtml
@@ -23,6 +23,9 @@
                 <div style="margin-top: 10px">
                     <a herf="#" role="button" id="dance-modal-like"><img data-bind="attr:{src:likeUrl}" />&nbsp; <span data-bind="text: likeText"></span></a>
                 </div>
+                <div style="margin-top: 10px">
+                    This song has <span data-bind="text: danceWeight"></span> votes.  The top song in the <span data-bind="text: danceName"></span> category has <span data-bind="text: danceWeightMax"></span> votes.
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
