Initial stripe integration

--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -151,6 +151,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Info <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="@help">Help</a></li>
+                            <li>@Html.ActionLink("Contribute", "Contribute", "Home")</li>
                             <li><a href="https://www.music4dance.net/blog">Blog</a></li>
                             <li>@Html.ActionLink("FAQ", "FAQ", "Home")</li>
                             <li>@Html.ActionLink("About Us", "About", "Home")</li>
