Fix mobile menu highlighting

--- a/m4d/Content/bootstrap/m4d-custom.less
+++ b/m4d/Content/bootstrap/m4d-custom.less
@@ -230,4 +230,14 @@ a.text-other:hover,
     border-color: #714000;
 }
 
+/* Navigation fixes*/
 
+@colDefault: #ffffff;
+
+@media (max-width: 767px) {
+    .navbar-default {
+        a {
+            color: @colDefault;
+        }
+    }
+}
