Get purchase generally working

--- a/m4d/Views/Home/Contribute.cshtml
+++ b/m4d/Views/Home/Contribute.cshtml
@@ -44,13 +44,14 @@ else
 
 <h2>Other ways to help</h2>
 
-If you're not ready to help out monetarily, there are many ways that you can support music4dance.net
-<ul>
-    <li>Vote on the dancability of songs and tag songs</li>
-    <li>Sign up for our beta and add your own songs songs</li>
-    <li>Tell your friends or add links to music4dance.net from your own sites</li>
-    <li>Give us feedback</li>
-    <li>Purchase music in iTunes or Amazon via our referal links.</li>
+<p class="big-text">If you're not ready to help out monetarily, there are many ways that you can support music4dance.net</p>
+<ul class="big-text">
+    <li>Tell your friends!</li>
+    <li>Vote on the <a href="https://www.music4dance.net/blog/music4dance-help/dance-tags/">dancability of songs</a> and <a href="https://www.music4dance.net/blog/music4dance-help/tag-editing/">tag songs</a></li>
+    <li>Sign up for our <a href="https://www.music4dance.net/blog/music4dance-help/beta/">beta</a> and <a href="https://www.music4dance.net/blog/music4dance-help/add-songs/">add your own songs</a></li>
+    <li>Tell your friends or add links to <a href="https://www.music4dance.net">music4dance.net</a> from your own sites</li>
+    <li>Give us <a href="https://www.music4dance.net/blog/feedback/">feedback</a></li>
+    <li><a href="https://www.music4dance.net/blog/music4dance-help/playing-or-purchasing-songs/">Purchase music</a> in <a href="https://www.music4dance.net/blog/music4dance-help/playing-or-purchasing-songs/itunes/">iTunes</a> or on <a href="https://www.music4dance.net/blog/music4dance-help/playing-or-purchasing-songs/amazon/">Amazon</a> via our referal links.</li>
 </ul>
 
 
