More user stuff

--- a/m4d/Views/ApplicationUsers/Details.cshtml
+++ b/m4d/Views/ApplicationUsers/Details.cshtml
@@ -161,6 +161,31 @@
         <dd>
             @Html.DisplayFor(model => model.ServicePreferenceDescription)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SubscriptionLevel)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SubscriptionLevel)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SubscriptionStart)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SubscriptionStart)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SubscriptionEnd)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SubscriptionEnd)
+        </dd>
+
     </dl>
 </div>
 <p>
