Add explicit help lengths to purchase pages.

--- a/m4d/Views/Home/Contribute.cshtml
+++ b/m4d/Views/Home/Contribute.cshtml
@@ -43,6 +43,8 @@
          </div>
      }
 
+    <p class="big-text">Any questions about how subscriptions or donations work, how transactions are processed securely or anything else related to this transaction?  Please check out our <a href="https://www.music4dance.net/blog/music4dance-help/subscriptions/" target="_blank">help page.</a></p>
+
     <h2>Other ways to help</h2>
 
     <p class="big-text">If you're not ready to help out monetarily, there are many ways that you can support music4dance.net</p>
