--- a/m4d/Views/Home/ConfirmPurchase.cshtml
+++ b/m4d/Views/Home/ConfirmPurchase.cshtml
@@ -26,5 +26,7 @@ else
     <p class="big-text">Your donation will help us continue to improve the web site and catalog.</p>
 }
 
+<p class="big-text">Any questions about how subscriptions or donations work, how transactions are processed securely or anything else related to this transaction?  Please check out our <a href="https://www.music4dance.net/blog/music4dance-help/subscriptions/" target="_blank">help page.</a></p>
+
 <p class="big-text">Please feel free to <a href="https://www.music4dance.net/blog/feedback/">contact us</a> if you have suggestions for improvements to the site or would like to contribute to the catalog.</p>
 
