More tweaks to the contribute page

--- a/m4d/Views/Home/Contribute.cshtml
+++ b/m4d/Views/Home/Contribute.cshtml
@@ -57,10 +57,18 @@ else
 <ul class="big-text">
     <li>Tell your friends!</li>
     <li>Vote on the <a href="https://www.music4dance.net/blog/music4dance-help/dance-tags/">dancability of songs</a> and <a href="https://www.music4dance.net/blog/music4dance-help/tag-editing/">tag songs</a></li>
+    <li>Follow music4dance on Spotify<iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:ebo1rk39vp51kkyjps45eobph&size=basic&theme=light" width="200" height="25" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>.
+        <ul><li> You can also <a href="https://www.music4dance.net/blog/playing-songs-from-music4dance/">follow specific playlists</a> on Spotify.</li></ul>
+    </li>
     <li>Sign up for our <a href="https://www.music4dance.net/blog/music4dance-help/beta/">beta</a> and <a href="https://www.music4dance.net/blog/music4dance-help/add-songs/">add your own songs</a></li>
     <li>Tell your friends or add links to <a href="https://www.music4dance.net">music4dance.net</a> from your own sites</li>
     <li>Give us <a href="https://www.music4dance.net/blog/feedback/">feedback</a></li>
     <li><a href="https://www.music4dance.net/blog/music4dance-help/playing-or-purchasing-songs/">Purchase music</a> in <a href="https://www.music4dance.net/blog/music4dance-help/playing-or-purchasing-songs/itunes/">iTunes</a> or on <a href="https://www.music4dance.net/blog/music4dance-help/playing-or-purchasing-songs/amazon/">Amazon</a> via our referal links.</li>
+    <li>Read the <a href="https://www.music4dance.net/blog/">music4dance blog</a> and:
+        <ul>
+            <li>Contribute to the conversation by commenting on a post </li>
+            <li>Or <a href="https://www.music4dance.net/blog/feedback/">contact us</a> if you would like to suggest a topic for a post or are interested in writing a guest post</li>
+        </ul>
 </ul>
 
 
